kube/applications/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    app: homarr
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  selector:
    matchLabels:
      app: homarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
              name: homarr
          volumeMounts:
            - name: database
              mountPath: /app/data/db
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: homarr-database
      restartPolicy: Always
