kube/applications/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  ports:
    - name: homarr
      port: 80
      protocol: TCP
      targetPort: 7575
  selector:
    app: homarr
