kube/applications/homarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
spec:
  rules:
    - host: homarr.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 80
  tls:
    - hosts:
        - homarr.${DOMAIN}
      secretName: wildcard-cert
